microshift/apps/mongodb/dbgate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbgate
  namespace: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbgate
  template:
    metadata:
      labels:
        app: dbgate
    spec:
      # Contentor temporário para preparar os ficheiros em disco
      containers:
        - name: dbgate
          image: docker.io/dbgate/dbgate:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: dbgate-storage
              mountPath: /tmp
      volumes:
        - name: dbgate-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: dbgate
  namespace: mongodb
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: dbgate
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dbgate-web
  namespace: mongodb
spec:
  host: dbgate.catacumbas69.com
  to:
    kind: Service
    name: dbgate
    weight: 100
  port:
    targetPort: http
