microshift/apps/mongodb/mongo-express-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mongo-express-web
  namespace: mongodb
spec:
  host: mongo-express.catacumbas69.com
  to:
    kind: Service
    name: mongo-express
    weight: 100
  port:
    targetPort: 8081
