microshift/apps/mongodb/mongodb-compass.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-compass
  namespace: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-compass
  template:
    metadata:
      labels:
        app: mongodb-compass
    spec:
      containers:
        - name: mongodb-compass
          image: docker.io/pajzo/mongodb-compass:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5800
              name: web
          volumeMounts:
            # Essencial para o OpenShift permitir a escrita do VNC/X11
            - name: compass-config
              mountPath: /config
      volumes:
        - name: compass-config
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-compass
  namespace: mongodb
spec:
  ports:
    - name: http
      port: 80
      targetPort: 5800
  selector:
    app: mongodb-compass
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mongodb-compass-web
  namespace: mongodb
spec:
  host: compass.catacumbas69.com
  to:
    kind: Service
    name: mongodb-compass
    weight: 100
  port:
    targetPort: http
