microshift/apps/mongodb/prisma-studio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prisma-studio
  namespace: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prisma-studio
  template:
    metadata:
      labels:
        app: prisma-studio
    spec:
      containers:
        - name: prisma-studio
          image: docker.io/library/node:22-alpine
          command: ["/bin/sh", "-c"]
          args:
            - |
              [...]
          ports:
            - containerPort: 5555
---
apiVersion: v1
kind: Service
metadata:
  name: prisma-studio
  namespace: mongodb
spec:
  ports:
    - port: 5555
      targetPort: 5555
  selector:
    app: prisma-studio
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prisma-studio-web
  namespace: mongodb
spec:
  host: studio.catacumbas69.com
  to:
    kind: Service
    name: prisma-studio
    weight: 100
  port:
    targetPort: 5555
